[package]
name = "acl-api-rs"
version = "0.1.0"
authors = ["aii-goto-yusaku <yusaku.g@inside.ai>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
dotenv = "0.15.0"
envy = "0.4"
serde = { version = "1.0", features = ["derive"] }
