[package]
name = "acl-api-rs"
version = "0.1.0"
authors = ["aii-goto-yusaku <yusaku.g@inside.ai>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
anyhow = "1.0"
dotenv = "0.15.0"
envy = "0.4"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tracing = "0.1.22"
tracing-actix-web = "0.2.1"
tracing-appender = "0.1.1"
tracing-bunyan-formatter = "0.1.7"
tracing-futures = "0.2.4"
tracing-log = { version = "0.1.1", features = ["env_logger"] }
tracing-subscriber = "0.2.15"
